# rformat

./: Cargo.toml
src/: argument.rs  error.rs  format.rs  format_spec.rs  formattable.rs  lib.rs  prelude.rs
src/fmt/: format.rs  mod.rs  violence.rs
